# python-backend-template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  cleanup-ghcr.yml  codeql.yml  release-please.yml
app/: main.py
app/core/: config.py  logging.py
tests/: test_date_utils.py  test_encryption.py  test_main.py
