[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name"
version = "0.1.0" # x-release-please-version
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlmodel==0.0.38",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "N", "S", "B", "A", "C4", "DTZ", "SIM", "RET", "ARG", "ERA", "PL"]
ignore = [
    "S101",    # Use of assert
    "RET504",  # Unnecessary assignment before return
    "B008",    # Do not perform function call `Depends` in argument defaults
    "S105",    # Possible hardcoded password
    "PLR2004", # Magic value used in comparison
    "PLC0415", # import should be at the top-level
    "B904",    # raise ... from err
]

[tool.ruff.lint.pylint]
max-args = 10
max-statements = 75

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "F841", "SIM", "DTZ", "PLR", "S", "B018"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false
